--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<a href="/privacy-policy.html">Privacy Policy</a>
-<a href="/terms-and-conditions.html">Terms & Conditions</a>
+<a href="/privacy-policy">Privacy Policy</a>
+<a href="/terms-and-conditions">Terms & Conditions</a>
