--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,7 +7,7 @@
     <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
 </head>
 <body>
-<strong>Privacy Policy</strong> <p>
+<h1>Privacy Policy</h1> <p>
     Aleksandr Solovev built the "Starfire: Squadron 228" app as
     an Ad Supported app. This SERVICE is provided by
     Aleksandr Solovev at no cost and is intended for use as
