--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<a href="/privacy-policy">Privacy Policy</a>
-<a href="/terms-and-conditions">Terms & Conditions</a>
+<a href="/starfire-squadron-228.github.io/privacy-policy">Privacy Policy</a>
+<a href="/starfire-squadron-228.github.io/terms-and-conditions">Terms & Conditions</a>
